# swe-bench-solver

./: README.md  hello.ipynb  pyproject.toml  read_local.py
src/swe_bench_solver/: __init__.py  ls.py  test_ls.py
viewer/: Makefile  server.py
viewer/frontend/: bun.lockb
viewer/frontend/app/: layout.tsx
viewer/frontend/app/(with header)/: Header.tsx  layout.tsx
viewer/frontend/app/(with header)/browse/: layout.tsx  page.tsx
viewer/frontend/app/(with header)/browse/[repo_name]/: layout.tsx
viewer/frontend/app/(with header)/browse/[repo_name]/[instance_id]/: DiffView.tsx  SweBenchInstance.tsx
viewer/frontend/app/(with header)/discuss/: page.tsx
viewer/frontend/app/(with header)/discuss/[threadId]/: page.tsx
viewer/frontend/app/browse/: layout.tsx
viewer/frontend/app/browse/[repo_name]/[instance_id]/: MarkdownPreviewer.tsx
viewer/frontend/next-starter/: bun.lockb  package.json
viewer/frontend/next-starter/app/: globals.css  page.tsx  types.ts
viewer/frontend/next-starter/app/browse/: layout.tsx  page.tsx
viewer/frontend/next-starter/app/browse/[repo]/: layout.tsx  page.tsx
viewer/frontend/next-starter/app/browse/[repo_name]/: layout.tsx  page.tsx
viewer/frontend/next-starter/app/test_case/[instance_id]/: SweBenchInstance.tsx  TestResults.tsx  page.tsx
viewer/frontend/swe-viewer/: bun.lockb  package.json  vite.config.ts
viewer/frontend/swe-viewer/src/: App.css  App.tsx
viewer/frontend/swe-viewer/src/components/: SWEBenchViewer.tsx
viewer/static/: styles.css
viewer/templates/: index.html  test_case_details.html  test_cases.html
(+4 files in other folders)
